--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
     "html-webpack-plugin": "^4.2.0",
+    "prop-types": "^15.7.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-dev-server": "^3.10.3"
