--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "^4.2.0",
     "prop-types": "^15.7.2",
     "style-loader": "^1.1.3",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-dev-server": "^3.10.3"
   }
