--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
     "html-webpack-plugin": "^4.2.0",
+    "npm": "^6.14.4",
     "prop-types": "^15.7.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^1.1.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
