--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "html-webpack-plugin": "^4.2.0",
     "npm": "^6.14.4",
     "prop-types": "^15.7.2",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
     "style-loader": "^1.1.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
