--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "radium": "^0.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "webpack-cli": "^3.3.11"
-  },
-  "devDependencies": {
+    "webpack-cli": "^3.3.11",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
@@ -35,5 +33,8 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-dev-server": "^3.10.3"
+  },
+  "devDependencies": {
+    
   }
 }
