--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build": "webpack"
+    "build": "webpack",
+    "heroku-postbuild": "webpack --prod"
+    
   },
   "author": "",
   "license": "ISC",
