--- a/package.json
+++ b/package.json
@@ -6,15 +6,10 @@
   "scripts": {
     "start": "webpack-dev-server --open",
     "build": "webpack"
-    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "radium": "^0.26.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "webpack-cli": "^3.3.11",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
@@ -25,17 +20,20 @@
     "html-webpack-plugin": "^4.2.0",
     "npm": "^6.14.4",
     "prop-types": "^15.7.2",
+    "radium": "^0.26.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "style-loader": "^1.1.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
